fixed alignment on intro in mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -274,7 +274,8 @@ nav a.active {
 @media (max-width: 800px) {
     .intro {
         text-align: center;
-        align-content: center;
+        margin-left: auto;
+        margin-right: auto;
     }
     .intro h1 {
         font-size: 30px;
